# Bolt

./: .gitignore  .gitmodules  AGENTS.md  Dependencies.lua  LICENSE.txt  README.md  premake5.lua
.agents/skills/ai-debug-logs/: SKILL.md
.github/workflows/: ci.yml
Axiom-Editor/: imgui.ini  premake5.lua
Axiom-Editor/src/: EditorApplication.cpp
Axiom-Editor/src/Editor/: ApplicationEditorAccess.hpp  AxiomPackageInstaller.cpp  AxiomPackageInstaller.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorComponentRegistration.cpp  EditorComponentRegistration.hpp  ExternalEditor.cpp  ExternalEditor.hpp  ExternalEditorInfo.hpp  ExternalEditorType.hpp
Axiom-Editor/src/Gui/: AssetBrowser.cpp  AssetBrowser.hpp  AssetBrowserActions.cpp  AssetType.hpp  ComponentInspectors.cpp  ComponentInspectors.hpp  EditorIcons.cpp  EditorIcons.hpp  HierarchyDragData.hpp  ImGuiUtils.cpp  ImGuiUtils.hpp  PackageManagerPanel.cpp  PackageManagerPanel.hpp  PrefabInspector.cpp  ThumbnailCache.cpp  ThumbnailCache.hpp
Axiom-Editor/src/Inspector/: PropertyDrawer.cpp  ReferencePicker.cpp  ReferencePicker.hpp
Axiom-Editor/src/Scripting/: ScriptComponentInspector.cpp  ScriptComponentInspector.hpp  ScriptDiscovery.hpp
Axiom-Editor/src/Systems/: ImGuiDebugSystem.cpp  ImGuiEditorLayer.cpp  ImGuiEditorLayer.hpp  ImGuiEditorLayerChrome.cpp  ImGuiEditorLayerPanels.cpp  ImGuiEditorLayerViewport.cpp
Axiom-Engine/: premake5.lua
Axiom-Engine/src/: Axiom.hpp  EntryPoint.hpp  pch.hpp
Axiom-Engine/src/Assets/: AssetKind.hpp  AssetRegistry.hpp
Axiom-Engine/src/Audio/: Audio.cpp  Audio.hpp  AudioHandle.hpp  AudioManager.cpp  AudioManager.hpp
Axiom-Engine/src/Axiom/: App.hpp
Axiom-Engine/src/Collections/: AABB.cpp  AABB.hpp  Color.hpp  Ids.hpp  Mat2.hpp  Quaternion.hpp  Vec2.hpp  Vec4.hpp  Viewport.hpp
Axiom-Engine/src/Components/: ComponentUtils.hpp  Components.hpp  Tags.hpp
Axiom-Engine/src/Core/: Application.cpp  Application.hpp  ApplicationConfig.hpp  Assert.cpp  Assert.hpp  AxiomErrorCode.hpp  Base.cpp  Base.hpp  Exceptions.cpp  Exceptions.hpp  Export.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Layer.cpp  Layer.hpp  LayerStack.hpp  Log.cpp  Log.hpp  LogCustomFormatters.hpp  Memory.cpp  Memory.hpp  MetaHelpers.hpp  MouseButton.hpp  SingleInstance.hpp  Time.cpp  Time.hpp  TypeRegistry.hpp  UUID.cpp  UUID.hpp  UUID32.hpp  Version.hpp  Window.cpp  Window.hpp  WindowSpecification.hpp
Axiom-Engine/src/Debugging/: LogLevel.hpp  Logger.cpp  Logger.hpp
Axiom-Engine/src/Diagnostics/: StatsOverlay.cpp  StatsOverlay.hpp
Axiom-Engine/src/Events/: AxiomEvent.hpp  EventBus.hpp  EventDispatcher.hpp  EventTypes.hpp  Events.hpp  FileDropEvent.hpp  KeyEvent.hpp  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyTypedEvent.hpp  MouseButtonEvent.hpp  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseMovedEvent.hpp  MouseScrolledEvent.hpp  SceneEvent.hpp  ScenePostStartEvent.hpp  ScenePostStopEvent.hpp  ScenePreStartEvent.hpp  ScenePreStopEvent.hpp  WindowCloseEvent.hpp  WindowFocusEvent.hpp  WindowLostFocusEvent.hpp  WindowMinimizeEvent.hpp  WindowResizeEvent.hpp
Axiom-Engine/src/Graphics/: DefaultTexture.hpp  Filter.hpp  GLCullingMode.hpp  GLInitSpecifications.hpp  Gizmo.cpp  Gizmo.hpp  GizmoRenderer.cpp  GizmoRenderer.hpp  ImageData.hpp  Instance44.hpp  OpenGL.cpp  OpenGL.hpp  PosColorVertex.hpp  QuadMesh.cpp  QuadMesh.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  ShaderManager.hpp  SpriteShaderProgram.cpp  SpriteShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  TextureEntry.hpp  TextureHandle.hpp  TextureManager.cpp  TextureManager.hpp  Wrap.hpp
Axiom-Engine/src/Gui/: GuiRenderer.cpp  GuiRenderer.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
Axiom-Engine/src/Inspector/: PropertyRegistration.hpp  PropertyType.hpp  PropertyValue.cpp  PropertyValue.hpp
Axiom-Engine/src/Math/: Math.hpp  Random.cpp  Random.hpp  Trigonometry.hpp  VectorMath.hpp
Axiom-Engine/src/Physics/: AxiomContact2D.hpp  AxiomPhysicsWorld2D.cpp  AxiomPhysicsWorld2D.hpp  Box2DWorld.cpp  Box2DWorld.hpp  Collision2D.hpp  CollisionDispatcher.hpp  OverlapMode.hpp  Physics2D.cpp  Physics2D.hpp  PhysicsSystem2D.cpp  PhysicsSystem2D.hpp  PhysicsTypes.hpp  PhysicsUtility.cpp  PhysicsUtility.hpp  RaycastHit2D.hpp
Axiom-Engine/src/Profiling/: GpuTimer.cpp  Profiler.cpp  Profiler.hpp
Axiom-Engine/src/Project/: AxiomProject.cpp  AxiomProject.hpp  LauncherProjectEntry.hpp  LauncherRegistry.cpp  LauncherRegistry.hpp  ProjectManager.cpp  ProjectManager.hpp
Axiom-Engine/src/Scene/: BuiltInComponentRegistration.cpp  BuiltInComponentRegistration.hpp  ComponentCategory.hpp  ComponentInfo.hpp  ComponentRegistry.hpp  (+12 more)
Axiom-Launcher/: imgui.ini  premake5.lua
Axiom-Launcher/src/: LauncherApplication.cpp
Axiom-NativeScripts/: CMakeLists.txt
Axiom-NativeScripts/Source/: FloatingMotion.cpp  NativeScriptExports.cpp  NewNativeScript.cpp  NewNativeScript1.cpp  PatrolMovement.cpp  Spinner.cpp
Axiom-PackageTool/: Axiom-PackageTool.csproj  Program.cs
Axiom-Runtime/: imgui.ini  premake5.lua
Axiom-Runtime/src/: RuntimeApplication.cpp
Axiom-Sandbox/: Axiom-Sandbox.csproj  premake5.lua
Axiom-Sandbox/Source/: PlayerController.cs
Axiom-ScriptCore/: Axiom-ScriptCore.csproj  premake5.lua
Axiom-ScriptCore/Source/: GlobalUsings.cs
Bolt-Editor/: premake5.lua
Bolt-Editor/src/: EditorApplication.cpp
Bolt-Engine/: premake5.lua
Bolt-Engine/src/: Bolt.hpp  EntryPoint.hpp
Bolt-Launcher/: imgui.ini  premake5.lua
Bolt-Launcher/src/: LauncherApplication.cpp
Bolt-NativeScripts/: CMakeLists.txt
Bolt-NativeScripts/Source/: NativeScriptExports.cpp
Bolt-Runtime/: premake5.lua
Bolt-Runtime/src/: RuntimeApplication.cpp
Bolt-Sandbox/: Bolt-Sandbox.csproj
Bolt-Sandbox/Source/: PlayerController.cs
Bolt-ScriptCore/: Bolt-ScriptCore.csproj  premake5.lua
Docs/Editor/: project-gitignore.txt
Docs/Preview/: INFO.txt
premake/: package-loader.lua
premake/dependencies/: axiom_physics.lua  bolt_physics.lua  box2d.lua  glad.lua  glfw.lua
scripts/: Setup.bat  Setup.py  setup-dotnet.ps1
scripts/ci/: linux_smoke_test.sh  runtime_smoke_test.py
(+350 files in other folders)
